re PR c++/38007 (g++ instantiate same operator twice due to bitfield in -O0 mode, causing symbol already defined assembler error)

PR c++/38007                                                                                     
gcc/cp/                                                                                                  
        * typeck.c (cp_build_modify_expr): Update bitfield handling.                                     
gcc/                                                                                                     
        * c-common.c (c_common_signed_or_unsigned_type): Remove C++                                      
        special casing.                                                                                  
gcc/testsuite/                                                                                           
        * g++.dg/conversion/bitfield10.C: New test.                                                      
        * g++.dg/warn/pr35635.C (func1): Accept additional warning.                                      
        * g++.old-deja/g++.mike/enum1.C: Expect warn about assignment.                                   
        * g++.dg/expr/bitfield9.C: Pass -Wno-overflow.

From-SVN: r141808